// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordController component should match saved snapshot (passwordObject.isVariantsOpened === false) 1`] = `
<div
  className="password-view"
>
  <Password
    isVariantsOpened={false}
    password="ABACUS ABACUS ABACUS ABACUS ABACUS"
    toggleVariantsOpened={[Function]}
  />
</div>
`;

exports[`PasswordController component should match saved snapshot (passwordObject.isVariantsOpened === true) 1`] = `
<div
  className="password-view"
>
  <Password
    isVariantsOpened={true}
    password="ABACUS ABACUS ABACUS ABACUS ABACUS"
    toggleVariantsOpened={[Function]}
  />
  <Variants
    caps={63}
    isCAPS={[Function]}
    separatedPassword={[Function]}
    separators={
      Array [
        "-",
        "_",
        ":",
        ".",
        "",
        " ",
      ]
    }
    toggleCAPS={[Function]}
  />
</div>
`;
